--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/chiaraboisaubin.com/logo-chiara.png" />
+    <link rel="apple-touch-icon" href="build/images/logo-chiara-lg.png" />
     <link rel="manifest" href="/chiaraboisaubin.com/manifest.json" />
     <title>Chiara BoisaAubin's site</title>
     <link href="/chiaraboisaubin.com/static/css/main.f40d6c99.chunk.css" rel="stylesheet">
