--- a/index.html
+++ b/index.html
@@ -20,4 +20,7 @@
     <script src="/chiaraboisaubin.com/static/js/main.089d04fb.chunk.js"></script>
 </body>
 
+<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+<script src="assets/js/jquery.smoothState.min.js"></script>
+<script src="assets/js/main.js"></script>
 </html>
