--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="par">
                     <p>
-                        UX / UI Designer | Product Designer | Figma Enthusiast | Ex-Front End Developer | Proponent for Inclusivity
+                        A Senior UX / UI Designer | Product Designer | Figma Enthusiast | Proponent for inclusivity and accessibility
                     </p>
                 </div>
 
@@ -57,14 +57,15 @@
                                 rel="noopener noreferrer" target="_blank"> <span class="fa fa-behance"> </span> </a>
                         </li>
                         <li> <a href="https://www.instagram.com/cdb_arts/" aria-label="instagram"
-                                rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> </a>
-                        </li>
+                                rel="noopener noreferrer" target="_blank"><span class="fa fa-instagram"> </span> </a> </li>
                         <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
                                 target="_blank"> <span class="fa fa-github"> </span> </a> </li>
+
                         <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
                                 target="_blank"> <span class="fa fa-envelope"> </span> </a> </li>
+
                         <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                                    target="_blank"> <span class="fa-solid fa-calendar"> </span> </a> </li>
+                                    target="_blank"> <span class=" fa fa-solid fa-calendar-days"> </span> </a> </li> 
                     </ul>
                 </nav>
             </div>
