--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -27,7 +27,7 @@
 
     <div class="content-container-project">
         <header class="header-project">
-            <h1> Making writing and reading reviews for beauty products customizable </h1>
+            <h1> Making writing and reading reviews for personal shopping</h1>
         </header>
 
         <nav class="nav-link fixed-nav header" id="NavBar">
