--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -70,7 +70,7 @@
                         <div class="">
                             <h2>Context</h2>
                             <p class="para-img">
-                                The project is to update the <a href="https://www.cvs.com/carepass/login"> Carepass
+                                To update the <a href="https://www.cvs.com/carepass/login"> Carepass
                                     dashboard page
                                 </a> and slowly add a space allowing users
                                 to access others' programs.
