--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -71,10 +71,10 @@
             <div class="context">
                 <h2>Overview</h2>
                 <p>
-                    Chowdown was a web-based application I was building with at MakeSense. This web app was a
+                    A web-based application I was building with at MakeSense. This web app was a
                     reservation for dining in a restaurant that allows people to pre-order and pay separately. There was
                     also a feature that would enable servers to know a user’s food allergies/dietary requirements in
-                    advance. The projects I focused on were the group payment methods, onboarding a new user who wanted
+                    advance. I focused on were the group payment methods, onboarding a new user who wanted
                     to make a reservation, and organizing reservations on the restaurant side.
                 </p>
                 <div class="dp-containter ">
