--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -70,7 +70,7 @@
                         <h2 style="margin-right: 1em;">Context</h2>
 
                         <p>
-                            This project aims to increase users' activity for the filtering feature of the shopping
+                           To increase users' activity for the filtering feature of the shopping
                             experience, precisely the product list page. However, it did evolve to look at the filtering
                             experience throughout the enterprise and find ways to make the feature consistent and
                             introduce horizontal filters.
@@ -116,7 +116,7 @@
                         <div class="">
 
                             <img src="https://i.ibb.co/PxBkpsg/Analyze.png" alt="Analyze" border="0"
-                                style="width: 150px; height: auto;">>
+                                style="width: 150px; height: auto;">
                             <h3> Analyze: </h3>
                             <ul class="cute-bullets">
                                 <li> User testing </li>
@@ -135,14 +135,17 @@
                         feel less overwhelming.
                     </p>
                     <h3> Short term project </h3>
-                    <p> Make specific features accessible by exposing a subset of information people look for the most.
-                    </p>
-                    
+                    <ul class="cute-bullets">
+                    <li> Make specific features accessible by exposing a subset of information people look for the most.
+                    </li>
+                    </ul>
                     <h3> Long term project </h3>
-                    <p> Explore the existing filter feature. </p>
-                    <p> Redesign the filtering experience by creating solutions for consistency and clarity for users.
-                    </p>
+                    <ul class="cute-bullets">
+                    <li> Explore the existing filter feature. </li>
+                    <li> Redesign the filtering experience by creating solutions for consistency and clarity for users.
+                    </li>
                     <p> Introduce new components for a design system.</p>
+                    </ul>
                 </div>
 
                 <h3 class="">Initial goal </h3>
