--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -76,7 +76,7 @@
                             <h2>Context</h2>
 
                             <p class="para-img"> 
-                                This project was to think of methods to provide a personal feel to the shopping experience by making the reviews customizable, specifically for beauty products. Doing the rating and review section for beauty products allowed the experience to use inclusive methods when asking people to describe their physical features like skin complexion and hair type but also thinking about how we can give the personal experience for different products.
+                               To think of methods to provide a personal feel to the shopping experience by making the reviews customizable, specifically for beauty products. Doing the rating and review section for beauty products allowed the experience to use inclusive methods when asking people to describe their physical features like skin complexion and hair type but also thinking about how we can give the personal experience for different products.
                             </p>
                         </div>
                         <img src="https://i.ibb.co/nw7K24b/Content-list.png" alt="Content-list" border="0">
