changed title for index page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="par">
                     <p>
-                        A Senior UX / UI Designer | Product Designer | Figma Enthusiast | Proponent for inclusivity and accessibility
+                        An excitable Senior UX / UI Designer, Product Designer, and Figma enthusiast who advocates for inclusivity and accessibility.
                     </p>
                 </div>
 
