--- a/pages/about.html
+++ b/pages/about.html
@@ -94,11 +94,11 @@
         <h2 class="large-text" id="about"> My design process </h2>
         <div class="space-between">
             <div class="dp-box">
-                <h3> Discovery</h3>
+                <h3> Discovery/Define</h3>
                 <img src="https://i.ibb.co/2FFqnyQ/Discovery.png" alt="Discovery" border="0"
                     style="width: 150px; height: auto;">
                 <p> Gathering as much information about what users value and their experience with a platform or
-                    product. </p>
+                    product as well business goals. </p>
             </div>
 
             <div class="dp-box">
