--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <nav class="nav-link">
                     <ul class="link btns_more">
                         <li><a href="/pages/projects.html"> Projects </a></li>
-                        <li><a href="/pages/about.html"> About </a></li>
+                        <li><a href="/pages/about.html"> About Chiara  </a></li>
                         <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
                                 rel="noopener noreferrer" target="_blank"> Resume > </a></li>
                     </ul>
