updated typo and alignment

--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -136,7 +136,7 @@
                     uncomfortable with spitting the bill. If they worked in the restaurant and had to handle organizing
                     the tables, it took work to use paper or the technology needed to work how they needed to.
                 </p>
-                <h2>Wirframing</h2>
+                <h2>Wireframing</h2>
                 <img src="https://i.ibb.co/VM8qGCb/wireframe.jpg" alt="wireframes of Chowdown experience">
                 <p>
                     With the information from the interview, I built the <a
