--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -212,7 +212,7 @@
                     alt="Screenshot-2024-01-27-at-8-48-59-PM" border="0">
                 <img src="https://i.ibb.co/whtH4ZG/Screenshot-2024-01-27-at-8-39-39-PM.png"
                     alt="Screenshot-2024-01-27-at-8-39-39-PM" border="0">
-
+</div>
 
 
             <div class="background-color">
@@ -261,8 +261,9 @@
 
 
 
-                </article>
+            </div>
         </div>
+    </div>
     </div>
     <footer class="footer-container">
         <div class="footer-content">
