--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -228,8 +228,7 @@
                     <li> Interaction notes </li>
                     <li> List of Components, existing elements, and new elements</li>
                 </ul>
-                <img src="https://i.ibb.co/f2RR23b/Screenshot-2024-03-07-at-4-47-29-AM.png"
-                    alt="Screenshot-2024-03-07-at-4-47-29-AM" border="0">
+                <img src="https://i.ibb.co/rxFSpRV/i-OS-components-filter.png" alt="i-OS-components-filter handoff" border="0">
             </div>
 
             <h2> Takeaways </h2>
