--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -79,8 +79,12 @@
                                To think of methods to provide a personal feel to the shopping experience by making the reviews customizable, specifically for beauty products. Doing the rating and review section for beauty products allowed the experience to use inclusive methods when asking people to describe their physical features like skin complexion and hair type but also thinking about how we can give the personal experience for different products.
                             </p>
                         </div>
-                        <img src="https://i.ibb.co/nw7K24b/Content-list.png" alt="Content-list" border="0">
-
+                        <!-- <img src="https://i.ibb.co/nw7K24b/Content-list.png" alt="Content-list" border="0"> -->
+                        <video  autoplay muted>
+                            <source src="/Users/chiaraboisaubin/Documents/GitHub/portfolio/Screen Recording 2024-05-03 at 5.36.52 PM.mov" type="video/mp4">
+                            <source src="/Users/chiaraboisaubin/Documents/GitHub/portfolio/Screen Recording 2024-05-03 at 5.36.52 PM.mov" type="video/ogg">
+                            Your browser does not support the video tag.
+                          </video>
                     </div>
                 </div>
 
