updated images and title

--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Making writing and reading reviews for beauty products customizable </title>
+    <title> Making writing and reading reviews be personal to shoppers </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -27,7 +27,7 @@
 
     <div class="content-container-project">
         <header class="header-project">
-            <h1> Making writing and reading reviews for personal shopping</h1>
+            <h1> Making writing and reading reviews be personal to shoppers</h1>
         </header>
 
         <nav class="nav-link fixed-nav header" id="NavBar">
@@ -79,12 +79,7 @@
                                To think of methods to provide a personal feel to the shopping experience by making the reviews customizable, specifically for beauty products. Doing the rating and review section for beauty products allowed the experience to use inclusive methods when asking people to describe their physical features like skin complexion and hair type but also thinking about how we can give the personal experience for different products.
                             </p>
                         </div>
-                        <!-- <img src="https://i.ibb.co/nw7K24b/Content-list.png" alt="Content-list" border="0"> -->
-                        <video  autoplay muted>
-                            <source src="/Users/chiaraboisaubin/Documents/GitHub/portfolio/Screen Recording 2024-05-03 at 5.36.52 PM.mov" type="video/mp4">
-                            <source src="/Users/chiaraboisaubin/Documents/GitHub/portfolio/Screen Recording 2024-05-03 at 5.36.52 PM.mov" type="video/ogg">
-                            Your browser does not support the video tag.
-                          </video>
+                        <img src="https://i.ibb.co/PcwkfQT/video-to-gif-converter.gif" alt="gif of rating and review prototype" border="0">
                     </div>
                 </div>
 
