--- a/pages/projects.html
+++ b/pages/projects.html
@@ -72,7 +72,7 @@
                 <a href="reviews-for-beauty-design.html"> <div class="context-background-img back-five"></div> </a>          
                 <div class="content-grid-text">
                     <h2>Making writing and reading <br>
-                         </h2>
+                        be personal to shoppers </h2>
                     
                   <h3>CVS</h3> 
                 <ul>
