--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Making writing and reading reviews be personal to shoppers </title>
+    <title> Making writing and reading reviews personal to shoppers </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -27,7 +27,7 @@
 
     <div class="content-container-project">
         <header class="header-project">
-            <h1> Making writing and reading reviews be personal to shoppers</h1>
+            <h1> Making writing and reading reviews personal to shoppers</h1>
         </header>
 
         <nav class="nav-link fixed-nav header" id="NavBar">
