updated space and some content

--- a/pages/about.html
+++ b/pages/about.html
@@ -37,7 +37,7 @@
 
             <ul class="link btns_more">
                 <li><a href="projects.html"> Projects </a></li>
-                <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=drive_link">Resume
+                <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=drive_link"> Resume
                     </a>></li>
             </ul>
         </div>
@@ -45,7 +45,8 @@
 
     </div>
     <div class="about-container">
-        <h2 class=""  id="about">About Chiara </h2>
+        <div class="background-color">
+        <h2 class="large-text"  id="about">About Chiara </h2>
         <div class="flex">
             <div class="about-container-text">
                 <p> Hiya, my name is Chiara <i> (chee-r-ah) </i> , I also go by Chi <i> (chee) </i>. My pronouns are
@@ -53,7 +54,7 @@
                     I am a UX/UI Designer, Product Designer, Digital Graphic Designer, Front End Developer, and
                     Researcher.
                 </p>
-                <p> I have been designing, researching, and developing for users for over eight years,
+                <p> I have been designing, researching, planner, and developing for users for over eight years,
                     and I enjoy working on making tech sync with people's lives. </p>
                 <p>
                     I admire human behavior when it comes to their interaction with technology.
@@ -73,10 +74,15 @@
                 </p>
             </div>
             <div>
-                <img src="https://i.ibb.co/C1Pwzg4/chi2-sq.jpg" alt="chi2-sq" border="0">
+                <img class="chiara-pic" src="https://i.ibb.co/C1Pwzg4/chi2-sq.jpg" alt="chi2-sq" border="0">
             </div>
         </div>
     </div>
+        <div class="">
+            <p> Learn more about my work experience </p>
+            <a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
+                target="_blank"> <button class="about-btn"> Download my resume </button> </a>
+        </div>
     <div class="dp-containter">
         <h2 class="large-text" id="about"> My Design philosophy </h2>
         <ul class="cute-bullets">
@@ -89,6 +95,8 @@
                 needed to adjust designs to work for the current world and fix mistakes. </li>
         </ul>
     </div>
+
+
     <div class="dp-containter">
 
         <h2 class="large-text" id="about"> My design process </h2>
@@ -134,7 +142,7 @@
         </div>
 
 
-        <div class=" about">
+        <div class="background-color about">
             <h2 class="large-text"> I also specialized in: </h2>
             <div class="wrap-2">
                 <ul class="cute-bullets">
@@ -165,7 +173,7 @@
             </div>
         </div>
         <div class="personal">
-            <h2>I enjoy</h2>
+            <h2>I enjoy doing: </h2>
 
             <div class="space-between">
                 <div class="personal-container">
@@ -199,16 +207,10 @@
             </div>
         </div>
 
-
-
-        <div class="">
-            <p> Learn more about my work experience </p>
-            <a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
-                target="_blank"> <button class="about-btn"> Download my resume </button> </a>
-        </div>
     </div>
     </div>
     </div>
+</div>
     <footer class="footer-container">
         <div class="footer-content">
             <h2> Connect with me </h2>
