--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -186,6 +186,7 @@
                 already implied that the information being discussed was gathered from user testing, as mentioned in the
                 following sentence.
             </p>
+            <small> *The wireframs design was from CVS's design system, used it to test it out. I am not a fan because it was not autolayed out, designs was distracting, and hard to creative drafts for high advance interections. This is <b> not </b> what I will use for wirframing. </small>
             <div class="">
 
                 <img src="https://i.ibb.co/pKdRWbZ/Screenshot-2024-01-27-at-8-46-43-PM.png"
