--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -64,9 +64,9 @@
         <!-- Information about the project -->
         <div class="project-conext-container">
 
-            <div class="context">
+            <div class="">
                 <div class="background-color">
-                    <div class="flex">
+                    <div class="">
                         <div class="">
                             <h2>Context</h2>
                             <p class="para-img">
