--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -64,7 +64,7 @@
 
         <!-- Context about the project -->
         <div class="project-conext-container">
-            <div class="context">
+            <div class="">
                 <div class="background-color">
                     <div class="context-container-1">
                         <h2 style="margin-right: 1em;">Context</h2>
@@ -134,7 +134,7 @@
                         users want a simple way to filter information. We sought to see how we can make the experience
                         feel less overwhelming.
                     </p>
-                    <h3> Short term project </h3>
+                    <!-- <h3> Short term project </h3>
                     <ul class="cute-bullets">
                     <li> Make specific features accessible by exposing a subset of information people look for the most.
                     </li>
@@ -144,8 +144,8 @@
                     <li> Explore the existing filter feature. </li>
                     <li> Redesign the filtering experience by creating solutions for consistency and clarity for users.
                     </li>
-                    <p> Introduce new components for a design system.</p>
-                    </ul>
+                    <li> Introduce new components for a design system.</li>
+                    </ul> -->
                 </div>
 
                 <h3 class="">Initial goal </h3>
@@ -174,7 +174,7 @@
                         <li> There is no ability to search through the filter. </li>
                         <li> Difficult to Navigate - specific on web mobile, iOS, and aOS. </li>
                     </ul>
-
+                    <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png" alt="Current-PLP-filter-experience-for-app" border="0">
                 </div>
 
             </div>
