--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -38,7 +38,9 @@
         </nav>
 
 
+
         <div class="project-information-container">
+
             <div class="column-l">
                 <article> <b> My role: </b> UX/UI Designer </article>
                 <article> <b> Timeline: </b> January 2023 - April 2023</article>
@@ -59,6 +61,16 @@
                 </div>
 
             </div>
+        </div>
+        <div class="project-conext-container">
+        <div class="background-color">
+            <h2> Context </h2>
+            <p>
+                Context 
+This project aimed to help new customers find a tattoo style or artist with the ability to schedule a session.  
+Ink Tank is a web application that allows tattoo lovers to look for tattoos, share their tattoos,
+schedule sessions or consultations with a tattoo designer, or develop a project for a new tattoo.
+This project was from a UX project with Career Foundry.
         </div>
 
         <div class="dp-containter ">
@@ -106,13 +118,10 @@
                 </div>
             </div>
         </div> 
-        <div class="project-conext-container">
-            <div class="context">
+
+            <div class="">
                 <article>
-                    <h3> Context </h3>
-                    <p>
-                        Context 
-This project aimed to help new customers find a tattoo style or artist with the ability to schedule a session.  
+
 
 <h4> Initial goal: </h4>
     <ul class="cute-bullets">
@@ -121,13 +130,6 @@ This project aimed to help new customers find a tattoo style or artist with the 
         <li>  Give ways for customers and artists to communicate and collaborate </li>
     </ul>
 
-                <h2>Discovery</h2>
-                <p>
-                    Ink Tank is a web application that allows tattoo lovers to look for tattoos, share their tattoos,
-                    schedule sessions or consultations with a tattoo designer, or develop a project for a new tattoo.
-                    This project was from a UX project with Career Foundry.
-                </p>
-               
                 </article>
             </div>
             <div class="context-with-image">
@@ -184,14 +186,16 @@ This project aimed to help new customers find a tattoo style or artist with the 
                     Danielle. To show how Ink Tank benedicts user’s day-to-day lives, I offered scenarios.
                 </p>
                 <h3> User flow  </h3>
-                <img class="img-1" src="https://i.ibb.co/XD8GypT/William.png" alt="William" border="0">
-                <article> From the data provided from understanding the user, I built a couple of personas, William.
-                    I am making the scenarios to show how Ink Tank can benedict users day-to-day lives. Now that there
-                    is a
-                    better understanding of the users, I created a user flow that shows how a person navigates
-                    throughout
-                    the app.
-                </article>
+                <div class="flex"> 
+                    <p> From the data provided from understanding the user, I built a couple of personas, William.
+                        I am making the scenarios to show how Ink Tank can benedict users day-to-day lives. Now that there
+                        is a
+                        better understanding of the users, I created a user flow that shows how a person navigates
+                        throughout
+                        the app.
+                        </p>
+                <img class="img-1" src="https://i.ibb.co/XD8GypT/William.png" style="width: 600px;" alt="William" border="0">
+                </div>
 
                 <img src="https://i.ibb.co/j51HQgt/userflow2.png" alt="userflow2" border="0">
                 <p> More detail about the<a class="left" target="blank"
@@ -244,7 +248,7 @@ This project aimed to help new customers find a tattoo style or artist with the 
                 <article>With the testing for time purposes, I conduct a usability test and preference testing
                     simultaneously.
                 </article>
-                <article>For this usability test, I only use video chats on Zoom and Skype. The users had the choice to
+                <!-- <article>For this usability test, I only use video chats on Zoom and Skype. The users had the choice to
                     use their laptop or mobile device to play with the prototype. I have to consistently remind the
                     users that the prototype was limited to the interaction for all the sessions. There was one button
                     that did not work. Some of the content was not clear about the page's objective, or it was oddly
@@ -256,7 +260,7 @@ This project aimed to help new customers find a tattoo style or artist with the 
                     others; they did not notice a feature or provided me a lot of information. It was great to hear
                     people interested in getting a tattoo but have not had the experience of getting a tattoo and
                     wanting more steps for the process.
-                </article>
+                </article> -->
                 <article>
                     I wanted to see if the user can navigate building a project, finding an artist, and booking an
                     appointment with the usability testing. For the preference test A/B Testing, I tested out the style
@@ -270,9 +274,9 @@ This project aimed to help new customers find a tattoo style or artist with the 
                     the changes were pretty easy to change because they were styling issues, but the one feature was a
                     challenge clarifying scheduling a session.
                 </article>
-                <p> More detail about the <a
-                        href="https://drive.google.com/file/d/14Ih_uBy1uPGBbRh33WXUCCcYCF2BP7Ti/view?usp=sharing"
-                        class="left" target="blank"> </a></p>
+              <a href="https://drive.google.com/file/d/14Ih_uBy1uPGBbRh33WXUCCcYCF2BP7Ti/view?usp=sharing"
+                        class="left" target="blank"> More detail about the testing. </a>
+                    <div class="background-color"> 
                         <h2> Handoff</h2>
                         <p>  For the developers, I did provide the following infromation in the Figma file:
                            </p>
@@ -281,6 +285,7 @@ This project aimed to help new customers find a tattoo style or artist with the 
                             <li> Clickable prototypes </li>
                             <li> Interaction notes </li>
                         </ul>
+                    </div>
                 <h2> Takeaways </h2>
                 <article>
                     As a designer, I wanted to figure out the best way for different components to function and support
