--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -68,8 +68,8 @@
 
 
         <div class="project-conext-container">
-            <div class="context">
-                <h2>Overview</h2>
+            <div class="">
+                <h2>Context</h2>
                 <p>
                     A web-based application I was building with at MakeSense. This web app was a
                     reservation for dining in a restaurant that allows people to pre-order and pay separately. There was
@@ -149,10 +149,10 @@
                     sketching ideas for the site regarding dietary needs, how the menu will look for the restaurants,
                     and pre-ordering. I wanted to make sure that the users could customize and provide as much
                     d the users making their account and reservation.
-                </p> information as possible to the restaurant in advance. Wroked on a <a
+                </p> information as possible to the restaurant in advance. Worked on a <a
                     href="https://drive.google.com/file/d/1CNyiEuBiOwlufeLWpqG7WqtjNfk5G8Fj/view?usp=sharing"> mid
-                    fiedtly prototypes</a> for the backend of the resturant an
-                <img src="https://i.ibb.co/p35gWX4/persona-ash.jpg" alt="Persona page- Ashley">
+                    fiedtly prototypes</a> for the backend of the resturant. 
+                <img src="https://i.ibb.co/p35gWX4/persona-ash.jpg" style="width: 600px;" alt="Persona page- Ashley">
                 <h2>Prototype</h2>
                 <iframe width="420px" height="720px" class="youtube"
                     src="https://www.youtube.com/embed/sNsRcff1DcY?rel=0?version=3&amp;autoplay=1&amp;controls=0&amp;&amp;showinfo=0&amp;loop=1"
