change some content

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title> Home</title>
+    <title> Selected Projects </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -126,7 +126,7 @@
                 <a href="ink-tank.html">   <div class="context-background-img back-three"></div> </a>
                 <div class="content-grid-text"> 
     
-                    <h2>  Scheduling Appointments for a tattoo session </h2>
+                    <h2>  Scheduling Appointments for a tattoo session online</h2>
                       <h3>Ink Tank</h3>   
                     <ul>
                         <li class="tabs"> UI </li>
@@ -142,7 +142,7 @@
                 <div class=" div5 content-wrapper">
                      <a href="chowdown.html">   <div class="context-background-img back-four"></div> </a>
                      <div class="content-grid-text"> 
-                        <h2> Dine-in experience in a restaurant  </h2>
+                        <h2>  Reservation seats and order at restaurants online </h2>
                         <h3>MakeSense</h3>   
                         <ul>
                             <li class="tabs"> UI </li>
