--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:type" content="website"/> 
 
     <link rel="stylesheet" href="CSS/main.css">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/9WpN4Pm/cute-icon-thumbnail.png"
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
         alt="cute-icon-thumbnail" border="0">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail"
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
         border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,11 +70,10 @@
                 </nav>
             </div>
         </div>
-        <!-- <div class="container_outer_img">
+        <div class="container_outer_img">
             <div class="img-inner">
-                <img src="https://i.ibb.co/BtZXj3b/ux-stock-image.jpg" alt="ux-stock-image" border="0"> 
-            </div>     
-            </div> -->
+                <img src="https://i.ibb.co/fHYMFmB/chiaras-logo.png" width="100%" alt="chiaras-logo" border="0">            </div>     
+            </div> 
     </div>
     </div>
     <div class="overlay"></div>
