--- a/pages/about.html
+++ b/pages/about.html
@@ -16,8 +16,9 @@
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> Chiara BoisAubin's site </title>
-    <link rel="icon" href="Images/Images/logo.gif" type="image/gif">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail"
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+        alt="cute-icon-thumbnail" border="0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
         border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
