--- a/pages/careof-redesign.html
+++ b/pages/careof-redesign.html
@@ -17,7 +17,10 @@
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title> Updating the evualation and product detail page  </title>
-    <link rel="shortcut icon" type="image/x-icon"  href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail" border="0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+    alt="cute-icon-thumbnail" border="0">
+<link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
+    border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
 </head>
