--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -16,9 +16,10 @@
 
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Welcome </title>
-    <link rel="icon" href="Images/Images/logo.gif" type="image/gif">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail"
+    <title> Reservation seats and order at restaurants online </title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+        alt="cute-icon-thumbnail" border="0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
         border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
