--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -14,9 +14,10 @@
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
 
-    <meta property=’og:image’ content="https://i.ibb.co/jvCMrjG/Thumnail-for-site.png">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail"
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+        alt="cute-icon-thumbnail" border="0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
         border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
