--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -12,7 +12,12 @@
     <meta property="og:image:height" content="627"/>
     <meta property="og:type" content="website"/> 
 
-    <link rel="shortcut icon" type="image/x-icon"  href="https://i.ibb.co/1dykL1z/Logo.png" alt="cute-icon-thumbnail" border="0">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png"
+    alt="cute-icon-thumbnail" border="0">
+<link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/fHYMFmB/chiaras-logo.png" alt="cute-icon-thumbnail"
+    border="0">
     <link rel="stylesheet" href="..//CSS/main.css">
     <script src="https://kit.fontawesome.com/ab4dc70ff3.js" crossorigin="anonymous"></script>
 </head>
