--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -65,22 +65,21 @@
 
         <!-- Context about the project -->
         <div class="project-conext-container">
-            <div class="">
+     
                 <div class="background-color">
-                    <div class="context-container-1">
-                        <h2 style="margin-right: 1em;">Context</h2>
-
-                        <p>
-                           To increase users' activity for the filtering feature of the shopping
-                            experience, precisely the product list page. However, it did evolve to look at the filtering
-                            experience throughout the enterprise and find ways to make the feature consistent and
+                    <h2 style="margin-right: 1em;">Context</h2>
+                        <div class="context">
+           <p>
+                            To increase users' activity for the filtering feature of the shopping
+                            experience, precisely the product list page. However, it did evolve to look at the enterprise's filtering
+                            experience, find ways to make the feature consistent, and
                             introduce horizontal filters.
                         </p>
-                    </div>
 
-                    <img src="https://i.ibb.co/whtH4ZG/Screenshot-2024-01-27-at-8-39-39-PM.png" alt="hi-fi-half-sheet"
-                        border="0">
+
+                    <img src="https://i.ibb.co/hB8G6Fq/filter-stuff.gif" alt="filter-stuff" border="0">
                 </div>
+            </div>
 
                 <div class="dp-containter">
                     <h2>Design Process </h2>
@@ -178,16 +177,16 @@
                     <img src="https://i.ibb.co/DQDTWDv/Current-PLP-filter-experience-for-app.png" alt="Current-PLP-filter-experience-for-app" border="0">
                 </div>
 
-            </div>
+           
 
 
             <h2>Wireframes</h2>
-            <p>
-                With the information that was gathered from the user testing" - This phrase is redundant because it is
+            <!-- <p>
+                With the information that was gathered from the user testing  - This phrase is redundant because it is
                 already implied that the information being discussed was gathered from user testing, as mentioned in the
                 following sentence.
-            </p>
-            <small> *The wireframs design was from CVS's design system, used it to test it out. I am not a fan because it was not autolayed out, designs was distracting, and hard to creative drafts for high advance interections. This is <b> not </b> what I will use for wirframing. </small>
+            </p> -->
+            <!-- <small> *The wireframs design was from CVS's design system, used it to test it out. I am not a fan because it was not autolayed out, designs was distracting, and hard to creative drafts for high advance interections. This is <b> not </b> what I will use for wirframing. </small> -->
             <div class="">
 
                 <img src="https://i.ibb.co/pKdRWbZ/Screenshot-2024-01-27-at-8-46-43-PM.png"
@@ -265,6 +264,7 @@
             </div>
         </div>
     </div>
+</div>
     </div>
     <footer class="footer-container">
         <div class="footer-content">
