--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -57,6 +57,8 @@
                         <li class="project-tabs"> aOS </li>
                         <li class="project-tabs"> Figma </li>
                         <li class="project-tabs"> Miro </li>
+                        <li class="project-tabs"> usertesting.com </li>
+                        <li class="project-tabs"> Adobe Creative Suite </li>
                     </ul>
                 </div>
             </div>
