--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -60,6 +60,7 @@
                             <li class="project-tabs"> mweb </li>
                             <li class="project-tabs"> Adobe Illustrator </li>
                             <li class="project-tabs"> Adobe XD </li>
+                            <li class="project-tabs"> usertesting.com </li>
                         </ul>
                     </div>
 
