--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -57,6 +57,7 @@
                         <li class="project-tabs"> aOS </li>
                         <li class="project-tabs"> Figma </li>
                         <li class="project-tabs"> Miro </li>
+                        <li class="project-tabs"> usertesting.com </li>
                     </ul>
                 </div>
             </div>
