--- a/pages/ink-tank.html
+++ b/pages/ink-tank.html
@@ -62,6 +62,8 @@
                         <li class="project-tabs"> aOS </li>
                         <li class="project-tabs"> Figma </li>
                         <li class="project-tabs"> Figjam </li>
+                        <li class="project-tabs"> usertesting.com </li>
+                        <li class="project-tabs"> Google Survey </li>
                     </ul>
                 </div>
 
