--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -62,6 +62,8 @@
                         <li class="project-tabs"> Web </li>
                         <li class="project-tabs"> Figma </li>
                         <li class="project-tabs"> Miro </li>
+                        <li class="project-tabs"> usertesting.com </li>
+                        <li class="project-tabs"> Adobe Illustrator </li>
                     </ul>
                 </div>
 
